--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+
   <title>San Diego Top Spots</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+
+  <style>
+    body {
+      background: #3a7bd5;
+      background: -webkit-linear-gradient(to right, #3a6073, #3a7bd5);
+      background: linear-gradient(to right, #3a6073, #3a7bd5);
+    }
+
+    .card {
+      margin-top: 15px;
+      padding: 25px;
+    }
+  </style>
 </head>
 
 <body>
   <div id="root"></div>
+
   <script src="bundle.js"></script>
 </body>
 
