--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,62 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
+  <link rel="icon" type="image/vnd.microsoft.icon" href="https://www.sandiego.org/media/favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
 
   <title>San Diego Top Spots</title>
 
   <style>
     body {
-      background: #3a7bd5;
-      background: -webkit-linear-gradient(to right, #3a6073, #3a7bd5);
-      background: linear-gradient(to right, #3a6073, #3a7bd5);
+      background-image: url('san-diego.jpg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+
+    h1 {
+      font-family: 'Mansalva';
+      font-size: 3.5rem;
+      text-shadow: 2px 2px 4px blueviolet;
+    }
+
+    p {
+      margin-bottom: 10px;
     }
 
     .card {
       margin-top: 15px;
-      padding: 25px;
+      background-color: rgba(255, 235, 0, 0.85);
+      color: navy;
+      border-style: solid;
+      border-color: blue
+    }
+
+    .shadow-lg {
+      box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175) !important;
+      padding: 25px 41px;
+    }
+
+    .container {
+      margin-bottom: 30px;
+    }
+
+    .btn {
+      border-radius: 42px;
+      background-color: #f4511e;
+      border: none;
+      color: #FFFFFF;
+      text-align: center;
+      font-size: 20px;
+      padding: 10px;
+      width: 150px;
+      transition: all .8s;
+      cursor: pointer;
+      margin: 5px;
+      text-shadow: 2px 2px 4px black;
     }
   </style>
 </head>
