--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no" />
 
   <link rel="icon" type="image/vnd.microsoft.icon" href="https://www.sandiego.org/media/favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,17 +14,15 @@
 
   <style>
     body {
-      background-image: url('san-diego.jpg');
-      background-repeat: no-repeat;
-      background-position: center;
-      background-attachment: fixed;
-      background-size: cover;
+      background: #667db6;
+      background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
+      background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
     }
 
     h1 {
       font-family: 'Mansalva';
       font-size: 3.5rem;
-      text-shadow: 2px 2px 4px blueviolet;
+      text-shadow: 2px 2px 4px navy;
     }
 
     p {
@@ -33,10 +31,10 @@
 
     .card {
       margin-top: 15px;
-      background-color: rgba(255, 235, 0, 0.85);
+      background-color: rgba(240, 219, 75);
       color: navy;
       border-style: solid;
-      border-color: blue
+      border-color: navy;
     }
 
     .shadow-lg {
@@ -50,7 +48,7 @@
 
     .btn {
       border-radius: 42px;
-      background-color: #f4511e;
+      background-color: #ff4800;
       border: none;
       color: #FFFFFF;
       text-align: center;
